k8s/storage-test-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: storage-test-pod

spec:
  containers:
    - name: storage-test
      image: nginx:latest

      volumeMounts:
        - name: backend-storage
          mountPath: /data

  volumes:
    - name: backend-storage
    
      persistentVolumeClaim:
        claimName: devconnect-backend-pvc
