k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devconnect-backend-service

spec:
  selector:
    app: devconnect-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
